[gd_scene load_steps=7 format=3 uid="uid://dliyla2p58k7y"]

[ext_resource type="Script" path="res://scripts/PlayerCombatUI.gd" id="1_x4vxs"]
[ext_resource type="Texture2D" uid="uid://cvfcox2lr8tk0" path="res://assets/progress_bar.png" id="2_v6tnx"]
[ext_resource type="Texture2D" uid="uid://dapydaxvimpvw" path="res://assets/health_bar_front.png" id="3_mh5yi"]
[ext_resource type="Texture2D" uid="uid://dcyj70skyuqe2" path="res://assets/experience_bar_big.png" id="4_1fysk"]
[ext_resource type="Texture2D" uid="uid://ci7bn81aialsd" path="res://assets/experience_bar_big_fill.png" id="5_f4icb"]
[ext_resource type="PackedScene" uid="uid://c38tkceppw1rq" path="res://scenes/ui/player_prepared_spells_ui.tscn" id="6_ht1x3"]

[node name="PlayerCombatUI" type="Node2D"]
script = ExtResource("1_x4vxs")

[node name="PlayerHealthDisplay" type="TextureProgressBar" parent="."]
offset_right = 40.0
offset_bottom = 40.0
value = 100.0
texture_under = ExtResource("2_v6tnx")
texture_progress = ExtResource("3_mh5yi")
metadata/_edit_lock_ = true

[node name="HealthLabel" type="Label" parent="PlayerHealthDisplay"]
layout_mode = 0
offset_left = 42.0
offset_top = 1.0
offset_right = 104.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="PlayerExperienceDisplay" type="TextureProgressBar" parent="."]
offset_left = 132.0
offset_right = 632.0
offset_bottom = 40.0
texture_under = ExtResource("4_1fysk")
texture_progress = ExtResource("5_f4icb")
metadata/_edit_lock_ = true

[node name="ExperienceLabel" type="Label" parent="PlayerExperienceDisplay"]
layout_mode = 0
offset_left = 236.0
offset_top = 2.0
offset_right = 298.0
offset_bottom = 41.0
text = "0"
metadata/_edit_lock_ = true

[node name="PlayerPreparedSpellsUI" parent="." instance=ExtResource("6_ht1x3")]
position = Vector2(281, -57)
